added cross env

--- a/eTism-ng-rtl/src/app/components/pages/home-five/home-five.component.html
+++ b/eTism-ng-rtl/src/app/components/pages/home-five/home-five.component.html
@@ -8,7 +8,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6 col-md-12">
                             <div class="main-banner-content black-text">
-                                <span class="sub-title">Stay Safe &</span>
+                                <span class="sub-title">Join Us</span>
                                 <h1>Be Informed About Autism</h1>
                                 <div class="btn-box">
                                     <a routerLink="/about-one" class="default-btn"><i class="flaticon-open-book"></i> Learn More</a>
@@ -29,7 +29,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6 col-md-12">
                             <div class="main-banner-content black-text">
-                                <span class="sub-title">Stay Safe &</span>
+                                <span class="sub-title">Join Us</span>
                                 <h1>Be Informed About Autism</h1>
                                 <div class="btn-box">
                                     <a routerLink="/about-one" class="default-btn"><i class="flaticon-open-book"></i> Learn More</a>
