--- a/eTism-ng/src/app/components/pages/home-one/home-one.component.html
+++ b/eTism-ng/src/app/components/pages/home-one/home-one.component.html
@@ -6,7 +6,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-12">
                     <div class="main-banner-content">
-                        <span class="sub-title">Stay Safe &</span>
+                        <span class="sub-title">Join Us</span>
                         <h1>Be Informed About Autism</h1>
                         <p>Nullam ac nisl mi. Nulla facilisi. Sed auctor dapibus tortor, nec iaculis metus aliquet at. Nam sit amet feugiat sem. Maecenas accumsan erat eu tristique ornare.</p>
                         <div class="btn-box">
