--- a/src/app/components/layouts/footer/footer.component.html
+++ b/src/app/components/layouts/footer/footer.component.html
@@ -1,71 +1,36 @@
 <footer class="footer-area">
     <div class="container">
-        <div class="subscribe-area">
-            <div class="row align-items-center">
-                <div class="col-lg-5 col-md-12">
-                    <h2>Subscribe To Our Newsletter</h2>
-                </div>
-
-                <div class="col-lg-7 col-md-12">
-                    <form class="newsletter-form">
-                        <input type="text" class="input-newsletter" placeholder="Enter your email address" name="EMAIL">
-                        <button type="submit">Subscribe Now <i class="flaticon-plane"></i></button>
-                    </form>
-                </div>
-            </div>
-        </div>
-
         <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="col-lg-4 col-md-4 col-sm-4">
                 <div class="single-footer-widget">
-                    <a routerLink="/" class="logo">
-                        <img src="assets/img/logo2.png" alt="logo">
-                    </a>
-                    <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan.</p>
                     <ul class="social-link">
-                        <li><a href="#" class="d-block" target="_blank"><i class='bx bxl-facebook'></i></a></li>
-                        <li><a href="#" class="d-block" target="_blank"><i class='bx bxl-twitter'></i></a></li>
-                        <li><a href="#" class="d-block" target="_blank"><i class='bx bxl-instagram'></i></a></li>
-                        <li><a href="#" class="d-block" target="_blank"><i class='bx bxl-linkedin'></i></a></li>
-                        <li><a href="#" class="d-block" target="_blank"><i class='bx bxl-pinterest-alt'></i></a></li>
+                        <li><a href="https://www.facebook.com/psihologclinicianiasi/" class="d-block" target="_blank"><i class='bx bxl-facebook'></i></a></li>
+                        <li><a href="https://www.instagram.com/psihologclinicianiasi/" class="d-block" target="_blank"><i class='bx bxl-instagram'></i></a></li>
+                        <li><a href="https://api.whatsapp.com/send/?phone=40750256254&text&type=phone_number&app_absent=0" class="d-block" target="_blank"><i class='bx bxl-whatsapp'></i></a></li>
                     </ul>
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="col-lg-4 col-md-4 col-sm-4">
                 <div class="single-footer-widget">
-                    <h3>Quick Links</h3>
-                    <ul class="footer-quick-links">
-                        <li><a routerLink="/">Home</a></li>
-                        <li><a routerLink="/about-one">About</a></li>
-                        <li><a routerLink="/doctors">Doctors</a></li>
-                        <li><a routerLink="/faq">FAQ's</a></li>
-                        <li><a routerLink="/prevention">Prevention</a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6 col-sm-6">
-                <div class="single-footer-widget">
-                    <h3>Contacts</h3>
+                    <h3>Contacte</h3>
                     <ul class="footer-contact-info">
-                        <li><span>Address:</span> Str. Zugravi, Nr. 2</li>
-                        <li><span>Email:</span> <a href="mailto:mada.dominte@gmail.com">mada.dominte@gmail.com</a></li>
-                        <li><span>Phone:</span> <a href="tel:+44587154756">+44 587 154756</a></li>
-                        <li><span>Fax:</span> <a href="tel:+557854578964">+55 785 4578964</a></li>
+                        <li><span>Address: </span>Strada Canta nr. 50, Iași</li>
+                        <li><span>Email: </span> <a href="mailto:mada.dominte@gmail.com">mada.dominte@gmail.com</a></li>
+                        <li><span>Telefon: </span> <a href="tel:+40750256254"> +40750.256.254</a></li>
                     </ul>
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="col-lg-4 col-md-4 col-sm-4">
                 <div class="single-footer-widget">
-                    <h3>Working Days</h3>
+                    <h3>Program de lucru</h3>
                     <ul class="footer-working-days">
-                        <li><span>Monday:</span> 8AM - 6PM</li>
-                        <li><span>Tuesday:</span> 8AM - 6PM</li>
-                        <li><span>Wednesday:</span> 8AM - 6PM</li>
-                        <li><span>Thursday - Friday:</span> 8AM - 6PM</li>
-                        <li><span>Sunday:</span> 8AM - 6PM</li>
+                        <li><span>Luni:</span> 08:00 - 17:00</li>
+                        <li><span>Marți:</span> 08:00 - 17:00</li>
+                        <li><span>Miercuri:</span> 08:00 - 17:00</li>
+                        <li><span>Joi:</span> 08:00 - 17:00</li>
+                        <li><span>Vineri:</span> 08:00 - 17:00</li>
                     </ul>
                 </div>
             </div>
@@ -76,43 +41,10 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-6">
-                    <p>Copyright <i class='bx bx-copyright'></i> 2026 eTism. Designed by <a target="_blank" href="https://envytheme.com/">EnvyTheme</a></p>
-                </div>
-
-                <div class="col-lg-6 col-md-6">
-                    <ul>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
-                    </ul>
+                    <p>Copyright <i class='bx bx-copyright'></i> 2026 eTism. Designed by <a target="_blank">Bo$$min de la Iasi</a></p>
                 </div>
             </div>
         </div>
     </div>
-
-    <div class="footer-shape1"><img src="assets/img/footer-shape1.png" alt="image"></div>
-    <div class="footer-shape2"><img src="assets/img/footer-shape2.png" alt="image"></div>
-    <div class="footer-shape3"><img src="assets/img/footer-shape3.png" alt="image"></div>
 </footer>
-
-<div class="search-overlay">
-    <div class="d-table">
-        <div class="d-table-cell">
-            <div class="search-overlay-layer"></div>
-            <div class="search-overlay-layer"></div>
-            <div class="search-overlay-layer"></div>
-            
-            <div class="search-overlay-close">
-                <span class="search-overlay-close-line"></span>
-                <span class="search-overlay-close-line"></span>
-            </div>
-
-            <div class="search-overlay-form">
-                <form>
-                    <input type="text" class="input-search" placeholder="Search here...">
-                    <button type="submit"><i class='bx bx-search-alt'></i></button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
 <div class="go-top"><i class='bx bx-up-arrow-alt'></i></div>
