--- a/src/app/components/layouts/header-one/header-one.component.html
+++ b/src/app/components/layouts/header-one/header-one.component.html
@@ -6,18 +6,16 @@
             <div class="row align-items-center">
                 <div class="col-lg-4 col-md-12">
                     <ul class="top-header-social">
-                        <li><a href="#" target="_blank"><i class='bx bxl-facebook'></i></a></li>
-                        <li><a href="#" target="_blank"><i class='bx bxl-twitter'></i></a></li>
-                        <li><a href="#" target="_blank"><i class='bx bxl-instagram'></i></a></li>
-                        <li><a href="#" target="_blank"><i class='bx bxl-pinterest-alt'></i></a></li>
-                        <li><a href="#" target="_blank"><i class='bx bxl-linkedin'></i></a></li>
+                        <li><a href="https://www.facebook.com/psihologclinicianiasi/" target="_blank"><i class='bx bxl-facebook'></i></a></li>
+                        <li><a href="https://www.instagram.com/psihologclinicianiasi/" target="_blank"><i class='bx bxl-instagram'></i></a></li>
+                        <li><a href="https://api.whatsapp.com/send/?phone=40750256254&text&type=phone_number&app_absent=0" target="_blank"><i class='bx bxl-whatsapp'></i></a></li>
                     </ul>
                 </div>
 
                 <div class="col-lg-8 col-md-12">
                     <ul class="top-header-contact-info">
-                        <li><i class='bx bx-map'></i> Str. Zugravi, Nr. 2</li>
-                        <li><i class='bx bx-phone-call'></i> Phone: <a href="tel:+40749638339">+40 749 638 339</a></li>
+                        <li><i class='bx bx-map'></i> <b>Strada Canta nr. 50, Iași</b></li>
+                        <li><i class='bx bx-phone-call'></i><a href="tel:+40750256254">+40750.256.254</a></li>
                     </ul>
                 </div>
             </div>
@@ -40,66 +38,14 @@
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a routerLink="/" class="nav-link">Home <i class='bx bx-chevron-down'></i></a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Home One</a></li>
-
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/home-two" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Home Two</a></li>
-
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/home-three" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Home Three</a></li>
-
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/home-four" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Home Four</a></li>
-
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/home-five" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Home Five</a></li>
-
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/home-six" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">One Page Style</a></li>
-                                </ul>
-                            </li>
-
-                            <li class="nav-item"><a routerLink="/" class="nav-link">About <i class='bx bx-chevron-down'></i></a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/about-one" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">About One</a></li>
-
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/about-two" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">About Two</a></li>
-                                </ul>
-                            </li>
-
-                            <li class="nav-item"><a routerLink="/" class="nav-link">Pages <i class='bx bx-chevron-down'></i></a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/doctors" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Doctors</a></li>
-
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/prevention" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Prevention</a></li>
-
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/appointment" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Appointment</a></li>
-
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/spread" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Spreads</a></li>
-
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/outbreak" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Outbreak</a></li>
-
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/faq" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">FAQ</a></li>
-
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/error" class="nav-link">404 Error</a></li>
-
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/coming-soon" class="nav-link">Coming Soon</a></li>
-                                </ul>
-                            </li>
-
-                            <li class="nav-item"><a routerLink="/" class="nav-link">Blog <i class='bx bx-chevron-down'></i></a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/blog-one" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Blog Grid</a></li>
-
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/blog-two" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Blog Right Sidebar</a></li>
-
-                                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/blog-details" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Blog Details</a></li>
-                                </ul>
-                            </li>
-
-                            <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/contact" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Contact</a></li>
+                            <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a href="#" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Acasă</a></li>
+                            <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/about" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Despre mine</a></li>
+                            <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/services" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Servicii</a></li>
                         </ul>
 
                         <div class="others-option d-flex align-items-center">
                             <div class="option-item">
-                                <a routerLink="/appointment" class="default-btn"><i class="flaticon-open-book"></i> Appointment</a>
+                                <a routerLink="/appointment" class="default-btn"><i class="flaticon-open-book"></i> Programează o ședință</a>
                             </div>
                         </div>
                     </div>
