--- a/src/app/components/pages/appointment/appointment.component.html
+++ b/src/app/components/pages/appointment/appointment.component.html
@@ -3,10 +3,10 @@
 <section class="page-title-area">
     <div class="container">
         <div class="page-title-content">
-            <h2>Appointment</h2>
+            <h2>Programare ședință</h2>
             <ul>
-                <li><a routerLink="/">Home</a></li>
-                <li>Appointment</li>
+                <li><a routerLink="/">Acasă</a></li>
+                <li>Programare ședință</li>
             </ul>
         </div>
     </div>
@@ -15,8 +15,7 @@
 <section class="appointment-area ptb-100">
     <div class="container">
         <div class="section-title">
-            <span class="sub-title">Appointment</span>
-            <h2>Book an Appointment</h2>
+            <h2>Programează o ședință</h2>
         </div>
 
         <div class="appointment-form">
@@ -24,27 +23,28 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
-                            <label>Your Name</label>
-                            <input type="text" class="form-control" placeholder="Your Name">
+                            <label>Nume Prenume</label>
+                            <input type="text" class="form-control" placeholder="Nume Prenume">
                         </div>
                     </div>
 
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
-                            <label>Your Email</label>
-                            <input type="email" class="form-control" placeholder="Your Email">
+                            <label>Email</label>
+                            <input type="email" class="form-control" placeholder="Email">
                         </div>
                     </div>
 
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
-                            <label>How Can We Help?</label>
+                            <label>Cu ce te pot ajuta?</label>
                                 
                             <div class="select-box">
                                 <select class="form-control">
-                                    <option>I would like to discuss</option>
-                                    <option>Need some help</option>
-                                    <option>Give some suggestion</option>
+                                    <option>Fișă psihologică (DGASPC/ CJRAE)</option>
+                                    <option>Evaluare nivel de dezvoltare</option>
+                                    <option>Evaluare tulburări de dezvoltare</option>
+                                    <option>Evaluare inițială pentru terapie</option>
                                 </select>
                             </div>
                         </div>
@@ -52,52 +52,20 @@
 
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
-                            <label>Visit Date</label>
-                            <input type="text" class="form-control" placeholder="2020-10-09">
+                            <label>Data</label>
+                            <mat-form-field appearance="fill" class="w-100">
+                                <input matInput [matDatepicker]="picker" placeholder="{{ now | date:'yyyy-MM-dd' }}" [(ngModel)]="selectedDate" name="appointmentDate">
+                                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                <mat-datepicker #picker></mat-datepicker>
+                            </mat-form-field>
                         </div>
                     </div>
 
                     <div class="col-lg-12 col-md-12">
-                        <div class="form-group">
-                            <label>Captcha Question</label>
-                            <input type="text" class="form-control" placeholder="3 + 7 = ?">
-                        </div>
-                    </div>
-
-                    <div class="col-lg-12 col-md-12">
-                        <button type="submit" class="default-btn"><i class="flaticon-plane"></i> Book Appointment</button>
+                        <button type="submit" class="default-btn"><i class="flaticon-plane"></i> Trimite</button>
                     </div>
                 </div>
             </form>
-        </div>
-    </div>
-</section>
-
-<section class="symptoms-area pt-100">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-6 col-md-12">
-                <div class="symptoms-image">
-                    <img src="assets/img/symptoms-img.png" alt="image">
-                </div>
-            </div>
-
-            <div class="col-lg-6 col-md-12">
-                <div class="symptoms-content">
-                    <span class="sub-title">Symptoms</span>
-                    <h2>Coronavirus Symptoms</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-
-                    <ul>
-                        <li><span><i class='flaticon-tick'></i> Cough</span></li>
-                        <li><span><i class='flaticon-tick'></i> Fever</span></li>
-                        <li><span><i class='flaticon-tick'></i> Tiredness</span></li>
-                        <li><span><i class='flaticon-tick'></i> Headache</span></li>
-                        <li><span><i class='flaticon-tick'></i> Breath Shortness</span></li>
-                        <li><span><i class='flaticon-tick'></i> Muscle Pain</span></li>
-                    </ul>
-                </div>
-            </div>
         </div>
     </div>
 </section>
