services page and little tweaks

--- a/src/app/components/pages/home-one/home-one.component.html
+++ b/src/app/components/pages/home-one/home-one.component.html
@@ -4,17 +4,9 @@
     <div class="main-banner banner-bg1">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-6 col-md-12">
+                <div class="col-lg-8 col-md-12">
                     <div class="main-banner-content">
-                        <span class="sub-title">Join Us</span>
-                        <h1>Be Informed About Autism</h1>
-                        <p>Nullam ac nisl mi. Nulla facilisi. Sed auctor dapibus tortor, nec iaculis metus aliquet at. Nam sit amet feugiat sem. Maecenas accumsan erat eu tristique ornare.</p>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 col-md-12">
-                    <div class="main-banner-image">
-                        <img src="assets/img/banner-img1.png" alt="image">
+                        <h1>Psihologie clinică pentru copii și familii</h1>
                     </div>
                 </div>
             </div>
@@ -24,17 +16,9 @@
     <div class="main-banner banner-bg2">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-6 col-md-12">
+                <div class="col-lg-8 col-md-12">
                     <div class="main-banner-content">
-                        <span class="sub-title">Join Us</span>
-                        <h1>You Can Educate Your Child!</h1>
-                        <p>Nullam ac nisl mi. Nulla facilisi. Sed auctor dapibus tortor, nec iaculis metus aliquet at. Nam sit amet feugiat sem. Maecenas accumsan erat eu tristique ornare.</p>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 col-md-12">
-                    <div class="main-banner-image">
-                        <img src="assets/img/banner-img2.png" alt="image">
+                        <h1>Evaluări cu grijă și profesionalism</h1>
                     </div>
                 </div>
             </div>
@@ -44,17 +28,21 @@
     <div class="main-banner banner-bg3">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-6 col-md-12">
+                <div class="col-lg-8 col-md-12">
                     <div class="main-banner-content">
-                        <span class="sub-title">Join Us</span>
-                        <h1>Learn Better to Prevent Autism</h1>
-                        <p>Sed porttitor feugiat felis, quis elementum ipsum aliquam vitae. Proin tempus magna vel risus cursus, non consectetur est auctor.</p>
+                        <h1>Intervenție psihologică personalizată</h1>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
 
-                <div class="col-lg-6 col-md-12">
-                    <div class="main-banner-image">
-                        <img src="assets/img/banner-img3.png" alt="image">
+    <div class="main-banner banner-bg2">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-8 col-md-12">
+                    <div class="main-banner-content">
+                        <h1>Sprijin psihologic pentru copil și familie</h1>
                     </div>
                 </div>
             </div>
@@ -88,32 +76,23 @@
 <section class="faq-area ptb-100 bg-f9f9f9">
     <div class="container">
         <div class="section-title">
-            <span class="sub-title">Faq's</span>
-            <h2>Frequently Asked & Questions</h2>
+            <h2>Întrebări frecvente</h2>
         </div>
 
         <div class="row">
-            <div class="col-lg-6 col-md-12">
-                <div class="faq-image faq-bg1">
-                    <img src="assets/img/faq-img.jpg" alt="image">
-
-                    <a href="https://www.youtube.com/watch?v=BtN-goy9VOY" class="video-btn popup-youtube"><i class="flaticon-play-button"></i></a>
-                </div>
-            </div>
-
-            <div class="col-lg-6 col-md-12">
+            <div class="col-lg-12 col-md-12">
                 <div class="faq-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
                             <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                Nullam pretium justo vel justo hendrerit?
+                                Cum îmi dau seama că este necesară o evaluare psihologică a copilului?
                                 <i class="flaticon-add"></i>
                             </a>
                         </div>
 
                         <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordionEx">
                             <div class="card-body">
-                                <p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam erat volutpat. In facilisis scelerisque ante, at vehicula sem pharetra eget.</p>
+                                <p>Dacă se observă comportamente care par neobișnuite, o discrepanță între abilitățile acestuia și cele ale co-vârstnicilor, ori lipsa unor abilități specifice vârstei sunt câteva din motivele pentru care este necesară o evaluare. De asemenea, în cazul școlarilor, evaluarea se poate realiza când se constată dificultăți de învățare, probleme de comportament sau emoționale.</p>
                             </div>
                         </div>
                     </div>
@@ -121,14 +100,14 @@
                     <div class="card">
                         <div class="card-header" role="tab" id="headingTwo">
                             <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                Aliquam tempor tellus ac interdum maximus?
+                                De la ce vârstă se poate realiza evaluarea psihologică unui copil?
                                 <i class="flaticon-add"></i>
                             </a>
                         </div>
 
                         <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordionEx">
                             <div class="card-body">
-                                <p> Maecenas vitae tincidunt dui, at dictum risus. Curabitur faucibus ornare luctus. Sed porttitor laoreet sem a dignissim. Nam et massa venenatis, euismod massa eget, fermentum sapien. Nullam fringilla nisl sed erat lobortis accumsan.</p>
+                                <p>Simptomele unei tulburări în dezvoltare pot fi observate încă din intervalul de vârstă de 18-24 luni, iar abilitățile necesare vârstei cronologice pot fi evaluate din punct de vedere psihologic chiar de la vârsta de 1 an și jumătate.</p>
                             </div>
                         </div>
                     </div>
@@ -136,14 +115,14 @@
                     <div class="card">
                         <div class="card-header" role="tab" id="headingThree">
                             <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                Nunc vel sapien et ex porta venenatis?
+                                În ce constă evaluarea psihologică a unui copil?
                                 <i class="flaticon-add"></i>
                             </a>
                         </div>
 
                         <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordionEx">
                             <div class="card-body">
-                                <p>Donec dignissim felis eget lacinia luctus. In imperdiet libero a leo commodo vulputate. In eu nibh sapien. Donec cursus suscipit odio vitae finibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                                <p>Evaluare presupune colectarea informațiilor din mai multe surse, și anume din observarea comportamentului liber al copilului, interviul cu părinții acestuia, aplicarea unor teste standardizate, precum și interacțiunea directă prin care psihologul oferă sarcini sau activități pentru a observa comportamentul și răspunsurile copilului.</p>
                             </div>
                         </div>
                     </div>
@@ -151,14 +130,14 @@
                     <div class="card">
                         <div class="card-header" role="tab" id="headingFour">
                             <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae?
+                                Ce informații conține raportul de evaluare?
                                 <i class="flaticon-add"></i>
                             </a>
                         </div>
 
                         <div id="collapseFour" class="collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#accordionEx">
                             <div class="card-body">
-                                <p>Donec sed semper eros. Vestibulum elementum, nulla at elementum placerat, tortor sem sollicitudin purus, sit amet dignissim erat tellus sit amet erat. Nam eget faucibus turpis.</p>
+                                <p>Raportul conține informațiile cu privire la metodele aplicate și rezultatele obținute, semnificația acestora, interpretarea concluziilor prin raportare la vârsta cronologică și recomandările pe care trebuie să le urmeze părinții în continuare.</p>
                             </div>
                         </div>
                     </div>
@@ -166,14 +145,14 @@
                     <div class="card">
                         <div class="card-header" role="tab" id="headingFive">
                             <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                                Aenean at nibh dignissim?
+                                Care este frecvența necesară a ședințelor de terapie?
                                 <i class="flaticon-add"></i>
                             </a>
                         </div>
 
                         <div id="collapseFive" class="collapse" role="tabpanel" aria-labelledby="headingFive" data-parent="#accordionEx">
                             <div class="card-body">
-                                <p>Pellentesque vitae laoreet mauris. In nunc tellus, sagittis quis condimentum eu, suscipit vel dolor. Sed lorem erat, lacinia sit amet nibh ac, elementum consectetur quam.</p>
+                                <p>Frecvența ședințelor depinde de nevoile copilului și poate varia de la 1–2 ședințe pe săptămână la 3–5 ședințe pe săptămână, în funcție de recomandarea psihologului. Durata și frecvența se ajustează în funcție de progresul copilului.</p>
                             </div>
                         </div>
                     </div>
