--- a/src/app/components/layouts/footer/footer.component.html
+++ b/src/app/components/layouts/footer/footer.component.html
@@ -15,7 +15,7 @@
                 <div class="single-footer-widget">
                     <h3>Contacte</h3>
                     <ul class="footer-contact-info">
-                        <li><span>Address: </span>Strada Canta nr. 50, Iași</li>
+                        <li><span>Adresă: </span>Strada Canta nr. 50, Iași</li>
                         <li><span>Email: </span> <a href="mailto:mada.dominte@gmail.com">mada.dominte@gmail.com</a></li>
                         <li><span>Telefon: </span> <a href="tel:+40750256254"> +40750.256.254</a></li>
                     </ul>
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-6">
-                    <p>Copyright <i class='bx bx-copyright'></i> 2026 eTism. Designed by <a target="_blank">Bo$$min de la Iasi</a></p>
+                    <p>Copyright <i class='bx bx-copyright'></i> 2026 eTism. Designed by <a target="_blank">CoNis</a></p>
                 </div>
             </div>
         </div>
