--- a/src/app/components/pages/appointment/appointment.component.html
+++ b/src/app/components/pages/appointment/appointment.component.html
@@ -23,8 +23,22 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
-                            <label>Nume Prenume</label>
-                            <input type="text" class="form-control" placeholder="Nume Prenume">
+                            <label>Nume</label>
+                            <input type="text" class="form-control" placeholder="Nume">
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6">
+                        <div class="form-group">
+                            <label>Prenume</label>
+                            <input type="text" class="form-control" placeholder="Prenume">
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6">
+                        <div class="form-group">
+                            <label>Telefon</label>
+                            <input type="tel" class="form-control" placeholder="Telefon">
                         </div>
                     </div>
 
@@ -51,17 +65,15 @@
                     </div>
 
                     <div class="col-lg-6 col-md-6">
-                        <div class="form-group">
-                            <label>Data</label>
-                            <mat-form-field appearance="fill" class="w-100">
-                                <input matInput [matDatepicker]="picker" placeholder="{{ now | date:'yyyy-MM-dd' }}" [(ngModel)]="selectedDate" name="appointmentDate">
-                                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                                <mat-datepicker #picker></mat-datepicker>
-                            </mat-form-field>
-                        </div>
+                        <mat-form-field appearance="fill" class="w-100">
+                            <mat-label>Alege data</mat-label>
+                            <input matInput [matDatepicker]="picker">
+                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                            <mat-datepicker #picker></mat-datepicker>
+                        </mat-form-field>
                     </div>
 
-                    <div class="col-lg-12 col-md-12">
+                    <div class="col-lg-12 col-md-12">   
                         <button type="submit" class="default-btn"><i class="flaticon-plane"></i> Trimite</button>
                     </div>
                 </div>
