--- a/src/app/components/layouts/header-one/header-one.component.html
+++ b/src/app/components/layouts/header-one/header-one.component.html
@@ -4,13 +4,13 @@
     <div class="top-header">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-12 col-md-12">
+                <div class="col-lg-12 col-md-12 col-sm-12">
                     <ul class="top-header-contact-info">
                         <li><a href="https://www.facebook.com/psihologclinicianiasi/" target="_blank"><i class='bx bxl-facebook'></i></a></li>
                         <li><a href="https://www.instagram.com/psihologclinicianiasi/" target="_blank"><i class='bx bxl-instagram'></i></a></li>
                         <li><a href="https://api.whatsapp.com/send/?phone=40750256254&text&type=phone_number&app_absent=0" target="_blank"><i class='bx bxl-whatsapp'></i></a></li>
-                        <li><i class='bx bx-map'></i> <b>Strada Canta nr. 50, Iași</b></li>
-                        <li><i class='bx bx-phone-call'></i><a href="tel:+40750256254">+40750.256.254</a></li>
+                        <li><i class='bx bx-map'></i> <b>Str. Canta nr. 50</b></li>
+                        <li><i class='bx bx-phone-call'></i><a href="tel:+40750256254">0750.256.254</a></li>
                     </ul>
                 </div>
             </div>
