changed slideshow 3 image and reduced height of collapsable menu

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1634,7 +1634,7 @@ Main Banner Area CSS
 }
 
 .main-banner.banner-bg3 {
-  background-image: url(../../assets/img/main-banner3.jpg);
+  background-image: url(../../assets/img/main-banner3.png);
 }
 
 .main-banner.banner-bg4 {
@@ -1768,7 +1768,7 @@ Main Banner Area CSS
 }
 
 .banner-section.banner-bg3 {
-  background-image: url(../../assets/img/main-banner3.jpg);
+  background-image: url(../../assets/img/main-banner3.png);
 }
 
 .banner-section .main-banner-image {
