--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1197,7 +1197,7 @@ Header Area CSS
             .navbar-nav {
                 border: 1px solid #eeeeee;
                 padding: 10px 20px;
-                height: 350px;
+                height: 170px;
                 background-color: $white-color;
                 overflow-y: scroll;
                 margin: {
@@ -1649,7 +1649,7 @@ Main Banner Area CSS
         background-image: url(../../assets/img/main-banner2.jpg);
     }
     &.banner-bg3 {
-        background-image: url(../../assets/img/main-banner3.jpg);
+        background-image: url(../../assets/img/main-banner3.png);
     }
     &.banner-bg4 {
         background-image: url(../../assets/img/main-banner4.jpg);
@@ -1817,7 +1817,7 @@ Main Banner Area CSS
         background-image: url(../../assets/img/main-banner2.jpg);
     }
     &.banner-bg3 {
-        background-image: url(../../assets/img/main-banner3.jpg);
+        background-image: url(../../assets/img/main-banner3.png);
     }
     .main-banner-image {
         text-align: left;
