added testimonials component

--- a/src/app/components/pages/home-one/home-one.component.html
+++ b/src/app/components/pages/home-one/home-one.component.html
@@ -73,6 +73,88 @@
     </div>
 </section>
 
+<section class="testimonials-area ptb-100">
+    <div class="container">
+        <div class="section-title">
+            <h2>Testimoniale</h2>
+        </div>
+
+        <div class="testimonials-slides owl-carousel owl-theme">
+            <div class="single-testimonial-item text-center">
+                <div class="testimonial-content">
+                    <p><em>Doamna Mădălina este un psiholog minunat! Întotdeauna pregătită să asculte, să ajute și să îndrume. Recomand din suflet!</em></p>
+                </div>
+                <div class="testimonial-info mt-3">
+                    <h6>Georgiana D.</h6>
+                </div>
+            </div>
+
+            <div class="single-testimonial-item text-center">
+                <div class="testimonial-content">
+                    <p><em>O persoană calmă, atentă la copil și comportament și la îngrijorările părinților! La final am primit un raport foarte frumos detaliat! Recomand!</em></p>
+                </div>
+                <div class="testimonial-info mt-3">
+                    <h6>Codruta B.</h6>
+                </div>
+            </div>
+
+            <div class="single-testimonial-item text-center">
+                <div class="testimonial-content">
+                    <p><em>Un om minunat și cald cu multă dedicare și pasiune în tot ceea ce face. Mereu implicată și atentă la nevoile copilului.</em></p>
+                </div>
+                <div class="testimonial-info mt-3">
+                    <h6>Larisa P.</h6>
+                </div>
+            </div>
+
+            <div class="single-testimonial-item text-center">
+                <div class="testimonial-content">
+                    <p><em>Doamna Mădălina, este minunată! Am găsit o persoană caldă, care lucrează cu multă atenție și cu grijă față de copii!</em></p>
+                </div>
+                <div class="testimonial-info mt-3">
+                    <h6>Bianca P.</h6>
+                </div>
+            </div>
+
+            <div class="single-testimonial-item text-center">
+                <div class="testimonial-content">
+                    <p><em>Un psiholog, terapeut și un om extraordinar! Datorită ei, am putut accepta și înțelege mai bine cu ce se confruntă copilul meu. E minunat să vezi un terapeut, cum se pune în locul unui copil și îi înțelege emoțiile! O recomand din toată inima!</em></p>
+                </div>
+                <div class="testimonial-info mt-3">
+                    <h6>Denisa Z.</h6>
+                </div>
+            </div>
+
+            <div class="single-testimonial-item text-center">
+                <div class="testimonial-content">
+                    <p><em>D-na psiholog întrunește toate calitățile să se facă plăcută de copii care îi trec pragul! Recomand cu încredere! Profesionalism!</em></p>
+                </div>
+                <div class="testimonial-info mt-3">
+                    <h6>Roxana P.</h6>
+                </div>
+            </div>
+
+            <div class="single-testimonial-item text-center">
+                <div class="testimonial-content">
+                    <p><em>Doamna Mădălina este o profesionistă, un om cu suflet, dragoste și dedicație față de copii. O recomand din toată inima! Este cea mai bună!</em></p>
+                </div>
+                <div class="testimonial-info mt-3">
+                    <h6>Elena A.</h6>
+                </div>
+            </div>
+
+            <div class="single-testimonial-item text-center">
+                <div class="testimonial-content">
+                    <p><em>Un psiholog clinician deosebit, foarte empatic și profesionist. Oferă sprijin real, multă răbdare și explicații clare. Se simte dedicarea și pasiunea pentru ceea ce face. Recomand cu mare încredere!</em></p>
+                </div>
+                <div class="testimonial-info mt-3">
+                    <h6>Gabriela M.</h6>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section class="faq-area ptb-100 bg-f9f9f9">
     <div class="container">
         <div class="section-title">
